# novalive

./: CMakeLists.ar1.txt  CMakeLists.ar2..txt  CMakeLists.txt  README.md  novalive.kdev4
.obs/: workflows.yml
src/: CMakeLists.ar1.txt  CMakeLists.ar2.txt  CMakeLists.txt  assets.qrc  main.cpp  main.qml  qml.qrc
src/assets/: assets.qrc  pixabay-cc0-mod1-cassette-2672633_640.xcf  pixabay-cc0-mod2-cassette-2672633_640.xcf
src/backend/: countrybackend.cpp  genresbackend.cpp  languagebackend.cpp
src/code/: countrybackend.cpp  countrybackend.h  genresbackend.cpp  genresbackend.h  languagebackend.cpp  languagebackend.h  main.cpp  main.cpp.original  mpvitem.h  mpvproperties.h  mpvrenderer.cpp  mpvrenderer.h
src/controls/: APIKeyYouTube1.qml  APIKeyYouTube2.qml  APIKeyYouTube3.qml  Country.qml  CountrySideBarPage.qml  Favorites.qml  FavoritesPage.qml  Genres.qml  GenresSideBarPage.qml  Home.qml  HomePage.qml  HomePage.qml~  Language.qml  LanguageSideBarPage.qml  MoreStationsPage.qml  Notifications.qml  PlayerAndSongsPage.qml  PlayerAndSongsPage.qml~  Search.qml  SearchStationsPage.qml  SettingsDialog.qml  SongsPage.qml~  SoulFunk.qml  SoulFunkPage.qml  StationsByCountry.qml  StationsByCountryPage.qml  StationsByGenre.qml  StationsByGenrePage.qml  StationsByLanguage.qml  StationsByLanguagePage.qml  YouTube.qml  main.qml  qml.qrc
src/data/: project.appdata.xml  project.desktop
